--- a/2.css
+++ b/2.css
@@ -61,3 +61,9 @@ body {
 .navbar a:hover::before {
     width: 100%;
 }
+
+.Text {
+    text-align: center;
+    justify-content: center;
+    padding-top: 30vh;
+}
