--- a/2.css
+++ b/2.css
@@ -68,7 +68,7 @@ body {
     padding-top: 30vh;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
     .header {
         padding: 20px 50px;
     }
