--- a/2.css
+++ b/2.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Popins:wght@300;400;500;600;700&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
     margin: 0;
@@ -68,4 +69,23 @@ body {
     padding-top: 30vh;
 }
 
+
+
+.Text h1, h2 {
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
     
+span {
+    color: red;
+}
+
+@media screen and (max-width: 800px) {
+    .Text {
+        padding: 0 22px;
+        margin: 0 22px;
+        display: flex;
+    }
+}
