--- a/2.css
+++ b/2.css
@@ -108,17 +108,29 @@ span {
   .e {width: 60%; background-color: #fa6e16;}
   .f {width: 60%; background-color: #f51010;}
 
+  
   footer {
-    margin-top: auto;
-    padding: 3px;
-    background-color: transparent;
-    margin-top: auto;
-    color: white;
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 1.2;
     text-align: center;
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* position: fixed;
+    z-index: 1; */
   }
+
+  footer a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+footer a:hover {
+    color:#00A0C6; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
 
 @media screen and (max-width: 800px) {
 
