--- a/2.css
+++ b/2.css
@@ -114,11 +114,10 @@ span {
     background-color: #333;
     color: #fff;
     padding: 20px;
-    position: absolute;
     bottom: 0;
     width: 100%;
-    /* position: fixed;
-    z-index: 1; */
+    position: fixed;
+    z-index: 1;
   }
 
   footer a {
